--- a/package.json
+++ b/package.json
@@ -1,59 +1,41 @@
 {
-  "name": "mern-dashboard-client",
+  "name": "refine-project",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@mui/icons-material": "^5.8.3",
-    "@refinedev/cli": "^2.16.1",
-    "@refinedev/core": "^4.42.4",
-    "@refinedev/inferencer": "^4.5.14",
-    "@refinedev/mui": "^5.13.12",
-    "@refinedev/react-hook-form": "^4.8.10",
-    "@refinedev/react-router-v6": "^4.5.2",
-    "@refinedev/simple-rest": "^4.5.2",
-    "@emotion/react": "^11.8.2",
-    "@emotion/styled": "^11.8.1",
-    "@mui/lab": "^5.0.0-alpha.85",
-    "@mui/material": "^5.14.2",
-    "@mui/x-data-grid": "^6.6.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
-    "@testing-library/user-event": "^14.1.1",
-    "@types/jest": "^29.2.4",
-    "apexcharts": "^3.36.3",
-    "axios": "^0.26.1",
-    "cross-env": "^7.0.3",
-    "react": "^18.0.0",
-    "react-apexcharts": "^1.4.0",
-    "react-dom": "^18.0.0",
-    "react-router-dom": "^6.8.1",
-    "react-scripts": "^5.0.0",
-    "web-vitals": "^1.1.1",
-    "react-hook-form": "^7.30.0"
-  },
-  "devDependencies": {
-    "@types/node": "^18.16.2",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "typescript": "^4.7.4"
-  },
   "scripts": {
-    "dev": "cross-env DISABLE_ESLINT_PLUGIN=true refine start",
-    "build": "cross-env DISABLE_ESLINT_PLUGIN=true refine build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "dev": "cross-env NODE_OPTIONS=--max_old_space_size=4096 refine dev",
+    "build": "refine build",
+    "start": "refine start",
+    "lint": "eslint '**/*.{js,jsx,ts,tsx}'",
     "refine": "refine"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "@ant-design/icons": "^5.0.1",
+    "@refinedev/antd": "^5.7.0",
+    "@refinedev/cli": "^2.7.4",
+    "@refinedev/core": "^4.28.2",
+    "@refinedev/devtools": "^1.1.6",
+    "@refinedev/inferencer": "^4.3.2",
+    "@refinedev/kbar": "^1.1.2",
+    "@refinedev/nextjs-router": "^5.3.2",
+    "@refinedev/simple-rest": "^4.0.0",
+    "antd": "^5.0.5",
+    "axios": "^1.5.1",
+    "next": "^13.0.6",
+    "next-i18next": "^8.9.0",
+    "nookies": "^2.5.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^12.20.11",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@typescript-eslint/parser": "5.48.0",
+    "cross-env": "^7.0.3",
+    "typescript": "^4.7.4"
+  },
+  "refine": {
+    "projectId": "bo6pPn-PwhmHN-n2EcjG"
   }
 }
