--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@refinedev/kbar": "^1.1.2",
     "@refinedev/nextjs-router": "^5.3.2",
     "@refinedev/simple-rest": "^4.0.0",
+    "@types/axios": "^0.14.0",
     "antd": "^5.0.5",
     "axios": "^1.5.1",
     "next": "^13.0.6",
