--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/axios": "^0.14.0",
     "antd": "^5.0.5",
     "axios": "^1.5.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "^13.0.6",
     "next-i18next": "^8.9.0",
     "nookies": "^2.5.2",
@@ -29,6 +30,7 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^12.20.11",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
