--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@types/axios": "^0.14.0",
     "antd": "^5.0.5",
     "axios": "^1.5.1",
+    "file-type": "^18.5.0",
     "jsonwebtoken": "^9.0.2",
     "next": "^13.0.6",
     "next-i18next": "^8.9.0",
     "nookies": "^2.5.2",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-image-crop": "^10.1.8"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.3",
