--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.5.1",
     "file-type": "^18.5.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
     "next": "^13.0.6",
     "next-i18next": "^8.9.0",
     "nookies": "^2.5.2",
